src/base/_typography.scss
// Typography
//
// Styleguide Style.typography
html {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

// Paragraphs
//
// All plain text elements use Lora font.
//
// Markup:
// <p>The quick brown fox jumps over the lazy dog</p>
//
// Styleguide Style.typography.paragraphs
p,
li {
  hyphens: none;
  font-size: $font-size-sm;
  line-height: 1.6rem;

  @include x-large-and-up {
    font-size: $font-size-md;
    line-height: 1.75rem;
  }
}

// Headings
//
// Heading elements `<h1> <h6>`. All headings use Roboto font.
//
// Markup:
// <h1>The quick brown fox jumps over the lazy dog</h1>
// <h2>The quick brown fox jumps over the lazy dog</h2>
// <h3>The quick brown fox jumps over the lazy dog</h3>
// <h4>The quick brown fox jumps over the lazy dog</h4>
// <h5>The quick brown fox jumps over the lazy dog</h5>
// <h6>The quick brown fox jumps over the lazy dog</h6>
//
// Styleguide Style.typography.headings
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: $roboto;
  font-weight: bold;
}

h1 {
  line-height: 1.225;
  margin-bottom: 30px;
  font-size: $font-size-xxl;

  @include medium-and-up {
    font-size: $font-size-xxxxl;
  }

  @include large-and-up {
    margin-bottom: 48px;
  }
}

h2 {
  line-height: 1.38;
  margin-bottom: 5px;
  font-size: $font-size-xl;

  @include medium-and-up {
    font-size: $font-size-xxl;
  }

  @include x-large-and-up {
    margin-bottom: 24px;
  }
}

h3 {
  font-size: $font-size-lg;

  @include medium-and-up {
    font-size: $font-size-xl;
  }
}

h4 {
  font-size: 1.5rem;
}

h5 {
  font-size: $font-size-md;
}

h6 {
  font-size: $font-size-sm;
}

.white-text {
  color: $white;
}

.screen-reader-text {
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute !important;
  width: 1px;
  word-wrap: normal !important;
}

// Links
//
// Link elements `<a>`.
//
// Markup:
// <a href="#">The quick brown fox jumps over the lazy dog</a>
//
// :hover     - hovered state
//
// Styleguide Style.typography.links
a {
  color: var(--link--color, $link-color);
  text-decoration: none;

  &.external-link {
    .external-icon {
      height: .55rem;
      width: .55rem;
      margin-left: .3rem;
      margin-right: .4rem;

      html[dir="rtl"] & {
        margin-left: .4rem;
        margin-right: .3rem;
        transform: scaleX(-1);
      }
    }
  }

  &:hover {
    color: var(--link-hover--color, $link-hover-color);
    text-decoration: underline;
  }
}

